test/e2e/testdata/listener-health-check.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: ClientTrafficPolicy
metadata:
  name: health-check-ctp
  namespace: gateway-conformance-infra
spec:
  targetRef:
    group: gateway.networking.k8s.io
    kind: Gateway
    name: same-namespace
    namespace: gateway-conformance-infra
  healthCheck:
    path: /ready
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-with-health-check
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: same-namespace
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /health-check
      backendRefs:
        - name: infra-backend-v1
          port: 8080
